--- a/app/views/sales/edit.html.erb
+++ b/app/views/sales/edit.html.erb
@@ -1,4 +1,4 @@
 <%= form_for sale do |form| %>
-  <%= form.select :stage, options_for_select(Sale.stages, sale.stage) %>
+  <%= form.select :stage, options_for_select(Sale.stages.keys, sale.stage) %>
   <%= form.submit "Salvar" %>
 <% end %>
