Sets up react, redux and draft of components

--- a/app/views/funnels/show.html.erb
+++ b/app/views/funnels/show.html.erb
@@ -1,3 +1,6 @@
+<%= react_component("App", { text: "example prop." }) %>
+
+<!--
 <%= link_to "Criar nova venda", new_sale_path %>
 
 <table>
@@ -21,3 +24,4 @@
     <% end %>
   </tbody>
 </table>
+-->
