--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="<%= locale %>">
   <head>
     <title>App</title>
     <%= csrf_meta_tags %>
@@ -11,7 +11,6 @@
   </head>
 
   <body>
-    <%= flash[:alert] if flash[:alert] %>
     <%= yield %>
   </body>
 </html>
