move around some files

--- a/app/views/funnels/show.html.erb
+++ b/app/views/funnels/show.html.erb
@@ -3,5 +3,6 @@
     {
       cards: sales,
       columns: stages.map { |id, title| { id: id, title: title } }
-    }
+    },
+    prerender: true
 %>
