all is working, needs refactor

--- a/app/webpacker/src/css/reset.scss
+++ b/app/webpacker/src/css/reset.scss
@@ -12,7 +12,7 @@ input {
   line-height: 1;
 
   &[type="number"] {
-    -moz-appearance: none;
+    -moz-appearance: textfield;
 
     &::-webkit-outer-spin-button,
     &::-webkit-inner-spin-button {
