--- a/app/webpacker/src/css/layout.scss
+++ b/app/webpacker/src/css/layout.scss
@@ -2,10 +2,15 @@
 .space-between  { justify-content: space-between; }
 .flex-grow      { flex: 1; }
 
+.inline-block { display: inline-block; }
+
 .absolute { position: absolute; }
+.top-0    { top: 0; }
+.left-0   { left: 0; }
 
 .full-height  { min-height: 100vh; }
-.height-100   { height: 1rem; }
+.height-100   { height: 1em; }
+.height-130   { height: 1.3em; }
 
 .width-100      { width: 100%; }
 .min-width-0    { min-width: 0; }
@@ -21,6 +26,11 @@
 .margin-right-md  { margin-right: $margin-md; }
 .margin-bottom-md { margin-bottom: $margin-md; }
 
-.margin-top-lg { margin-top: $margin-lg; }
+.margin-top-lg    { margin-top: $margin-lg; }
+.margin-right-xl  { margin-right: $margin-xl; }
 
-.padding-md { padding: $margin-md; }
+.padding-md   { padding: $margin-md; }
+.padding-x-lg {
+  padding-left: $margin-lg;
+  padding-right: $margin-lg;
+}
