--- a/app/webpacker/src/css/theme.scss
+++ b/app/webpacker/src/css/theme.scss
@@ -3,6 +3,7 @@
 .bg-secondary { background-color: #2495e0; }
 .bg-success   { background-color: #4cb65b; }
 .bg-failure   { background-color: #b15759; }
+.bg-darken-5  { background-color: rgba(0, 0, 0, .05); }
 .bg-darken-15 { background-color: rgba(0, 0, 0, .15); }
 .bg-darken-40 { background-color: rgba(0, 0, 0, .40); }
 
@@ -14,10 +15,12 @@
 .text-larger  { font-size: 1.2em; }
 .text-smaller { font-size: .95em; }
 .text-right   { text-align: right; }
+.text-center  { text-align: center; }
 
 .break-word { word-wrap: break-word; }
 
-.rounded-border { border-radius: $border-radius; }
+.border-rounded { border-radius: $border-radius; }
+.border-pill    { border-radius: 9999px; }
 
 .box-shadow       { box-shadow: 0 0 2px rgba(0, 0, 0, 0.15); }
 .box-shadow-inset { box-shadow: 0 -2px 0 rgba(0, 0, 0, 0.15) inset; }
@@ -28,8 +31,3 @@
 *[draggable="true"] { cursor: grab; }
 
 ::placeholder { @extend .text-gray, .text-italic; }
-
-.pill {
-  padding: $margin-md $margin-lg;
-  border-radius: 9999px;
-}
