--- a/app/views/funnels/show.html.erb
+++ b/app/views/funnels/show.html.erb
@@ -2,7 +2,9 @@
   react_component "App",
     {
       cards: sales,
-      columns: stages.map { |id, title| { id: id, title: title } }
+      columns: stages.map do |id, title|
+        { id: id, title: title, cards: sales.where(stage: id) }
+      end
     },
     prerender: true
 %>
