--- a/app/webpacker/src/css/reset.scss
+++ b/app/webpacker/src/css/reset.scss
@@ -27,3 +27,14 @@ button {
   cursor: pointer;
   border: none;
 }
+
+fieldset {
+  border: none;
+  margin: 0;
+  padding: 0;
+
+  &[disabled] {
+    cursor: wait;
+    * { pointer-events: none; }
+  }
+}
