update README and fix tests

--- a/app/webpacker/src/css/theme.scss
+++ b/app/webpacker/src/css/theme.scss
@@ -16,6 +16,7 @@
 .text-smaller { font-size: .95em; }
 .text-right   { text-align: right; }
 .text-center  { text-align: center; }
+.text-tight   { letter-spacing: -0.2px; }
 
 .break-word { word-wrap: break-word; }
 
