--- a/app/webpacker/src/css/layout.scss
+++ b/app/webpacker/src/css/layout.scss
@@ -15,6 +15,7 @@
 .width-100      { width: 100%; }
 .min-width-0    { min-width: 0; }
 .min-width-200  { min-width: 200px; }
+.max-width-300  { max-width: 300px; }
 
 .vertical-align-middle { vertical-align: middle; }
 
